<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/register_bk_color"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTv"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/inputs"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dec_10_2020"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/taskTv"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/task"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxLines="3"
                android:padding="5dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>